--- a/index.ipynb
+++ b/index.ipynb
@@ -71,21 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-d8a7b7312504>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-5-9b328e4c7c24>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d8a7b7312504>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    help dic\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-9b328e4c7c24>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    help help\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
-   "source": [
-    "help di"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
