--- a/index.ipynb
+++ b/index.ipynb
@@ -70,22 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-9b328e4c7c24>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-9b328e4c7c24>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    help help\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population =  # change None\n",
+    "greenville_population = greenville['Popu'] # change None\n",
     "greenville_population # 93"
    ]
   },
