--- a/index.ipynb
+++ b/index.ipynb
@@ -370,13 +370,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_count = None\n",
+    "city_count = len(cities)-1\n",
     "city_count # 12"
    ]
   },
