--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -378,16 +378,16 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "12"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = len(cities)-1\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
